# SOC_Copilet

./: .env  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  PROJECT_STATUS.md  README.md  SBOM.json  SECURITY.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  prometheus.yml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
assets/storyboard/: README.md
backend/: alembic.ini  pyproject.toml
backend/.github/workflows/: ci.yml
backend/app/: main.py  worker.py
backend/app/agents/: README.md
backend/app/core/: README.md  config.py  database.py  exceptions.py  logging.py  middleware.py  security.py  telemetry.py
backend/app/database/: README.md
backend/app/llm/: README.md  schemas.py  service.py
backend/app/llm/providers/: base.py  omniroute.py  placeholders.py
backend/app/models/: audit_log.py  base.py  chat.py  correlation.py  evidence.py  file_record.py  graph.py  incident.py  investigation.py  ioc.py  normalized_event.py  organization.py  refresh_token.py  threat_intel.py  user.py
backend/app/modules/ai/: chat.py  context_builder.py  prompt_manager.py  provider.py  reasoning.py  report.py  router.py  schemas.py  service.py
backend/app/modules/auth/: README.md  router.py  schemas.py  service.py
backend/app/modules/correlation/: engine.py  router.py
backend/app/modules/evidence/: router.py
backend/app/modules/graph/: engine.py  repository.py  router.py
backend/app/modules/health/: README.md  router.py
backend/app/modules/incidents/: README.md  router.py  schemas.py  service.py
backend/app/modules/investigation/: pipeline.py  router.py  schemas.py
backend/app/modules/investigation/ioc/: base.py  engine.py  extractors.py
backend/app/modules/investigation/parsers/: __init__.py  base.py  cef_parser.py  csv_parser.py  evtx.py  json_parser.py  registry.py  syslog.py
backend/app/modules/mitre/: engine.py  router.py  service.py
backend/app/modules/threat_intel/: aggregator.py  schemas.py
backend/app/modules/threat_intel/providers/: __init__.py  abuseipdb.py  base.py  otx.py  phishtank.py  urlhaus.py  virustotal.py
backend/app/modules/timeline/: engine.py  router.py
backend/app/modules/uploads/: README.md  router.py  schemas.py  service.py
backend/app/prompts/: attack_analysis.md.j2  chat.md.j2  explain.md.j2  recommendations.md.j2  root_cause_analysis.md.j2  technical_report.md.j2
backend/app/shared/: README.md  schemas.py
backend/infrastructure/: README.md
backend/infrastructure/database/migrations/: env.py
backend/infrastructure/database/migrations/versions/: 4435bed414cf_add_refresh_token_and_audit_log_models.py  6cc17a9a8238_add_threat_intel_and_evidence_models.py  72d6e731a19f_add_correlation_and_graph_models.py  92b50179f5de_add_chat_model.py  9ce49fe9b5e8_add_investigation_models.py
backend/rules/: bruteforce.yaml  powershell.yaml
backend/scripts/: security_audit.sh  seed_db.py
backend/tests/: test_correlation_benchmark.py  test_investigation.py  test_mitre.py  test_threat_intel.py
backend/tests/fixtures/: synthetic_datasets.py
backend/tests/fixtures/logs/: test.json
backend/tests/performance/: locustfile.py
backend/tests/unit/: test_health.py
docker/: backend.Dockerfile  worker.Dockerfile
docs/: API.md
docs/architecture/: ARCHITECTURE.md  ai_agent_architecture.md  backend_architecture.md  database_er.md  investigation_pipeline.md  modular_monolith.md  request_flow.md  system_architecture.md
docs/performance/: BENCHMARK_RESULTS.md  PERFORMANCE_REPORT.md
docs/reports/: AI_EVALUATION_REPORT.md  BACKEND_AUDIT.md  OPERATIONS_RUNBOOK.md  RELEASE_NOTES_v1.0.0-rc1.md  (+1 more)
scripts/: create_milestones.ps1
