[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "soc-copilot-backend"
version = "0.1.0"
description = "SOC Copilot Backend"
authors = ["SOC Copilot Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic-settings = "^2.2.1"
pydantic = "^2.7.1"
structlog = "^24.1.0"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
redis = "^5.0.4"
qdrant-client = "^1.9.1"
minio = "^7.2.7"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
ruff = "^0.4.4"
mypy = "^1.10.0"
