[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "soc-copilot-backend"
version = "0.1.0"
description = "SOC Copilot Backend"
authors = ["SOC Copilot Team"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
structlog = "^24.1.0"
redis = "^5.0.4"
qdrant-client = "^1.9.0"
minio = "^7.2.7"
httpx = "^0.27.0"
passlib = {extras = ["argon2"], version = "^1.7.4"}
pyjwt = "^2.8.0"
python-multipart = "^0.0.9"
arq = "^0.28.0"
evtx = "^0.12.1"
websockets = "^16.0"
tenacity = "^9.1.4"
pyyaml = "^6.0.3"
cachetools = "^7.1.4"
openai = "^2.44.0"
jinja2 = "^3.1.6"
prometheus-fastapi-instrumentator = "<8.0.0"
opentelemetry-api = "^1.43.0"
opentelemetry-sdk = "^1.43.0"
opentelemetry-instrumentation-fastapi = "^0.64b0"
opentelemetry-instrumentation-sqlalchemy = "^0.64b0"
opentelemetry-instrumentation-redis = "^0.64b0"
opentelemetry-instrumentation-httpx = "^0.64b0"

[tool.mypy]
explicit_package_bases = true
mypy_path = "."

[tool.pytest.ini_options]
pythonpath = "."


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
ruff = ">=0.4,<0.16"
mypy = "^1.9.0"
import-linter = "^2.0"
respx = "^0.23.1"

[tool.importlinter]
root_package = "app"

[[tool.importlinter.contracts]]
name = "Modules should not import from each other"
type = "independence"
modules = [
    "app.modules.auth",
    "app.modules.incidents",
    "app.modules.uploads",
    "app.modules.health",
]

[[tool.importlinter.contracts]]
name = "Core should not depend on modules"
type = "layers"
layers = [
    "app.modules",
    "app.core",
]
